--- a/package.json
+++ b/package.json
@@ -20,6 +20,15 @@
   },
   "homepage": "https://github.com/PerezYuan/miyazono#readme",
   "devDependencies": {
-    "webpack": "^1.13.3"
+    "babel-core": "^6.21.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.18.0",
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-amdclean": "^1.1.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-order": "^1.1.1",
+    "requirejs": "^2.3.2"
   }
 }
