--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
     "gulp-order": "^1.1.1",
+    "gulp-print": "^2.0.1",
     "requirejs": "^2.3.2"
   }
 }
