--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "miyazono component base on jQuery",
   "main": "entry.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp"
   },
   "repository": {
     "type": "git",
